<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.devzy.share</groupId>
	<artifactId>zkui</artifactId>
	<version>2.1.0</version>
	<packaging>jar</packaging>
	<name>zkui</name>
	<url>http://maven.apache.org</url>
	<properties>
		<java.version>1.8</java.version>
		<java.encoding>UTF-8</java.encoding>
		<maven.test.skip>true</maven.test.skip>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
		<metrics.version>3.2.6</metrics.version>
		<jetty.version>11.0.1</jetty.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-webapp</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-annotations</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.25</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.197</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.zookeeper</groupId>
			<artifactId>zookeeper</artifactId>
			<version>3.4.5</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun.jmx</groupId>
					<artifactId>jmxri</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jdmk</groupId>
					<artifactId>jmxtools</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.10</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.flyway</groupId>
			<artifactId>flyway-core</artifactId>
			<version>2.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.javalite</groupId>
			<artifactId>activejdbc</artifactId>
			<version>1.4.8</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.47</version>
		</dependency>
		<dependency>
			<groupId>freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.8</version>
			<type>jar</type>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${java.encoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<!-- <version>3.0.2</version> -->
				<configuration>
					<archive>
						<manifestEntries>
							<Change>${maven.build.timestamp}</Change>
							<Built-Date>${maven.build.timestamp}</Built-Date>
						</manifestEntries>
					</archive>
					<excludes>
						<exclude>log4j.properties</exclude>
						<exclude>application.properties</exclude>
						<exclude>bin/*</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>2.0.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<logsDirectory>logs</logsDirectory>
					<tempDirectory>tmp</tempDirectory>
					<repositoryLayout>flat</repositoryLayout>
					<repositoryName>lib</repositoryName>
					<binFileName>${project.artifactId}</binFileName>
					<binFolder>bin</binFolder>
					<assembleDirectory>${project.build.directory}/${project.name}</assembleDirectory>
					<configurationDirectory>config</configurationDirectory>
					<copyConfigurationDirectory>true</copyConfigurationDirectory>
					<configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<extraJvmArguments>-Xms128m</extraJvmArguments>
					<target>${project.build.directory}</target>
					<platforms>
						<platform>windows</platform>
						<platform>unix</platform>
					</platforms>
					<binFileExtensions>
						<unix>.sh</unix>
						<windows>.bat</windows>
					</binFileExtensions>
					<unixScriptTemplate></unixScriptTemplate>
					<programs>
						<program>
							<name>${project.artifactId}</name>
							<!-- 启动类 -->
							<mainClass>com.devzy.share.zkui.Main</mainClass>
							<jvmSettings>
								<extraArguments>
									<extraArgument>-server</extraArgument>
									<extraArgument>-Xmx1G</extraArgument>
									<extraArgument>-Xms1G</extraArgument>
									<extraArgument>-XX:+UseG1GC</extraArgument>
									<extraArgument>-Xloggc:../logs/gc.log</extraArgument>
									<extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
									<extraArgument>-XX:+PrintGCDetails</extraArgument>
									<extraArgument>-XX:+PrintGCTimeStamps</extraArgument>
									<extraArgument>-Dlog4j.configuration=log4j.properties</extraArgument>
								</extraArguments>
							</jvmSettings>
						</program>
					</programs>
				</configuration>
				<!-- <goals> <goal>assemble</goal> <goal>package</goal> </goals> -->
				<executions>
					<execution>
						<id>make-appassembler</id>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<appendAssemblyId>false</appendAssemblyId>
					<!-- <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
						</descriptorRefs> -->
					<descriptors>
						<descriptor>assembly.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>